--- a/python study/ex05)반복문.ipynb
+++ b/python study/ex05)반복문.ipynb
@@ -451,9 +451,7 @@
   {
    "cell_type": "markdown",
    "id": "38518173-b317-44fe-87f9-ed98463dd97e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 이중 for문\n",
     "- 구구단을 만들어 보자"
@@ -854,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 7,
    "id": "79ca6ac1-97b4-4835-a321-1ec525aa7049",
    "metadata": {},
    "outputs": [
@@ -864,7 +862,7 @@
        "[4, 6, 8, 10]"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,11 +884,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "9bb458da-63da-4326-8710-ab76b758351d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list4 : [1, 2, 3, 4, 5, 6, 7]\n",
+      "list5 : [3, 4, 5, 6]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 8, 10, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list4=[1,2,3,4,5,6,7]\n",
+    "list5=[3,4,5,6]\n",
+    "list6=[]\n",
+    "if len(list4)<len(list5):\n",
+    "    a = len(list4)\n",
+    "    b = len(list5) - len(list4)\n",
+    "else:\n",
+    "    a = len(list5)\n",
+    "    b = len(list4) - len(list5)\n",
+    "for i in range(a):\n",
+    "    list6.append(list4[i]+list5[i])\n",
+    "list6\n",
+    "\n",
+    "for i in range(b):\n",
+    "    if len(list4)<len(list5):\n",
+    "        list6.append(list5[a+i])\n",
+    "    else:\n",
+    "        list6.append(list4[a+i])\n",
+    "list6\n",
+    "\n",
+    "print('list4 :', list4)\n",
+    "print('list5 :', list5)\n",
+    "list6"
+   ]
   },
   {
    "cell_type": "code",
