--- a/python study/LIB/영화 리뷰 데이터 분석.ipynb
+++ b/python study/LIB/영화 리뷰 데이터 분석.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d924ffee-f7e6-4207-93f7-c0da5960531c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "5067466c-f448-4ccb-959a-d2e534f3be1a",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "       [     6040,      1097,         4, 956715569]], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 9,
    "id": "c04bf1d4-c391-458a-acb3-5015a87a7617",
    "metadata": {},
    "outputs": [],
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 11,
    "id": "0d0c2297-9ec0-4ed0-8fa5-c3fac8fb888e",
    "metadata": {},
    "outputs": [
@@ -2000,7 +2000,7 @@
        "array([   1,    2,    3, ..., 3950, 3951, 3952], dtype=int64)"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2011,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 17,
+   "id": "a0491561-0707-483f-a46a-292e587852ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3706"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(movie_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "0c51004c-0d28-4521-b0a2-8461d847435e",
    "metadata": {},
    "outputs": [
@@ -3021,7 +3042,7 @@
        " ...]"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
