--- a/python study/LIB/hr데이터 실습.ipynb
+++ b/python study/LIB/hr데이터 실습.ipynb
@@ -938,10 +938,7 @@
    "execution_count": 46,
    "id": "4a66a72a-5aad-45af-8300-dc9c4516cfda",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2505,12 +2502,7 @@
    "cell_type": "code",
    "execution_count": 56,
    "id": "1d63e729-4a7d-484a-b0df-5965cdd0f6e0",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3031,12 +3023,7 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "d855e6e5-39eb-41a0-b1a0-83ad8ae7e63a",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3071,10 +3058,6 @@
    "execution_count": 71,
    "id": "6580830c-0f1e-47ff-9e38-0b647d2563cc",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "scrolled": true
    },
    "outputs": [
@@ -3171,12 +3154,7 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "ca493991-df61-4d61-a2ea-376da6133f7a",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3658,12 +3636,7 @@
    "cell_type": "code",
    "execution_count": 87,
    "id": "e87a166d-15d3-4fee-9fed-ea5ee0c36595",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
