study 2025-06-11 머신러닝-타이타닉데이터 분석

--- a/machin learning/ex03_버섯데이터를 활용한 독버섯 분류(의사결정나무).ipynb
+++ b/machin learning/ex03_버섯데이터를 활용한 독버섯 분류(의사결정나무).ipynb
@@ -3137,7 +3137,9 @@
    "cell_type": "code",
    "execution_count": 143,
    "id": "d173ed85-03d6-45d5-a185-87210b8e5890",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3783,7 +3785,9 @@
    "cell_type": "code",
    "execution_count": 149,
    "id": "17a51ab2-a8bb-4be3-bbfe-bc9ea509f9c2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
