머신러닝 끝

--- a/machin learning/ex02_iris 데이터를 활용한 꽃 품종 분류.ipynb
+++ b/machin learning/ex02_iris 데이터를 활용한 꽃 품종 분류.ipynb
@@ -2178,19 +2178,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "d5be4f27-3f0c-4342-acdb-a0e39171edff",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import cross_val_score"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "55c58768-5c22-48b6-954b-64ee58c31c2c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9428571428571428"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(knn_model, X_train, y_train, cv=5).mean()"
+   ]
   },
   {
    "cell_type": "code",
