07-02 스프링부트 수업 gitignore 문제 있음 해결해야함.

--- a/crawling/8.구글 이미지 데이터 수집.ipynb
+++ b/crawling/8.구글 이미지 데이터 수집.ipynb
@@ -96,6 +96,10 @@
    "execution_count": 81,
    "id": "7862acfd-8391-4c12-9373-9c924648d69f",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [
