--- a/crawling/2.멜론차트top100수집.ipynb
+++ b/crawling/2.멜론차트top100수집.ipynb
@@ -42,7 +42,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
